--- a/ClassifactionAssignment.ipynb
+++ b/ClassifactionAssignment.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 27,
       "metadata": {
         "id": "DxIqMPur3Ll9"
       },
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 29,
       "metadata": {
         "id": "CfCRpcey5-hs"
       },
@@ -82,7 +82,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 29,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -93,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -103,7 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [
         {
@@ -139,7 +139,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 31,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -150,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [
         {
@@ -168,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [
         {
@@ -204,7 +204,7 @@
               "dtype: object"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 33,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -215,7 +215,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -224,7 +224,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [
         {
@@ -260,7 +260,7 @@
               "dtype: object"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 35,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -271,7 +271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [
         {
@@ -476,7 +476,7 @@
               "[5 rows x 27 columns]"
             ]
           },
-          "execution_count": 17,
+          "execution_count": 36,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -487,7 +487,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [
         {
@@ -692,7 +692,7 @@
               "[5 rows x 27 columns]"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 37,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -708,7 +708,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 38,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -717,7 +717,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 39,
       "metadata": {},
       "outputs": [
         {
@@ -753,7 +753,7 @@
               "dtype: object"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 39,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -764,7 +764,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 40,
       "metadata": {},
       "outputs": [
         {
@@ -969,7 +969,7 @@
               "[5 rows x 27 columns]"
             ]
           },
-          "execution_count": 21,
+          "execution_count": 40,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -980,7 +980,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 41,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -990,7 +990,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 42,
       "metadata": {},
       "outputs": [
         {
@@ -1195,7 +1195,7 @@
               "[5 rows x 27 columns]"
             ]
           },
-          "execution_count": 23,
+          "execution_count": 42,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1206,17 +1206,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 43,
       "metadata": {},
       "outputs": [],
       "source": [
-        "test = df.drop(\"MIS_Status\", axis=1)\n",
-        "train = df[\"MIS_Status\"]"
+        "X = df.drop(\"MIS_Status\", axis=1)\n",
+        "y = df[\"MIS_Status\"]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 44,
       "metadata": {},
       "outputs": [
         {
@@ -1239,12 +1239,12 @@
         }
       ],
       "source": [
-        "print(train)"
+        "print(y)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 45,
       "metadata": {},
       "outputs": [
         {
@@ -1449,13 +1449,13 @@
               "[5 rows x 26 columns]"
             ]
           },
-          "execution_count": 26,
+          "execution_count": 45,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "test.head()"
+        "X.head()"
       ]
     },
     {
@@ -1471,12 +1471,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "ZzrJVTpe9LND"
-      },
+      "execution_count": 46,
+      "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "# 10 Popular Classificaiton Methods can be found here:\n",
+        "# https://www.educative.io/blog/scikit-learn-cheat-sheet-classification-regression-methods"
+      ]
     },
     {
       "cell_type": "markdown",
