--- a/ClassifactionAssignment.ipynb
+++ b/ClassifactionAssignment.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 55,
       "metadata": {
         "id": "DxIqMPur3Ll9"
       },
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 56,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 57,
       "metadata": {
         "id": "CfCRpcey5-hs"
       },
@@ -82,7 +82,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 29,
+          "execution_count": 57,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -93,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 58,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -103,7 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 59,
       "metadata": {},
       "outputs": [
         {
@@ -139,7 +139,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 31,
+          "execution_count": 59,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -150,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 60,
       "metadata": {},
       "outputs": [
         {
@@ -168,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 61,
       "metadata": {},
       "outputs": [
         {
@@ -204,7 +204,7 @@
               "dtype: object"
             ]
           },
-          "execution_count": 33,
+          "execution_count": 61,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -215,7 +215,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 62,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -224,7 +224,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 63,
       "metadata": {},
       "outputs": [
         {
@@ -260,7 +260,7 @@
               "dtype: object"
             ]
           },
-          "execution_count": 35,
+          "execution_count": 63,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -271,7 +271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 64,
       "metadata": {},
       "outputs": [
         {
@@ -476,7 +476,7 @@
               "[5 rows x 27 columns]"
             ]
           },
-          "execution_count": 36,
+          "execution_count": 64,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -487,7 +487,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 65,
       "metadata": {},
       "outputs": [
         {
@@ -692,7 +692,7 @@
               "[5 rows x 27 columns]"
             ]
           },
-          "execution_count": 37,
+          "execution_count": 65,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -708,7 +708,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 66,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -717,7 +717,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 67,
       "metadata": {},
       "outputs": [
         {
@@ -753,7 +753,7 @@
               "dtype: object"
             ]
           },
-          "execution_count": 39,
+          "execution_count": 67,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -764,7 +764,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 68,
       "metadata": {},
       "outputs": [
         {
@@ -969,7 +969,7 @@
               "[5 rows x 27 columns]"
             ]
           },
-          "execution_count": 40,
+          "execution_count": 68,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -980,17 +980,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 69,
       "metadata": {},
       "outputs": [],
       "source": [
-        "df['MIS_Status'] = df['MIS_Status'].replace(['P I F'],'Paid')\n",
-        "df['MIS_Status'] = df['MIS_Status'].replace(['CHGOFF'],'Charged')"
+        "df['MIS_Status'] = df['MIS_Status'].replace(['P I F'], 0)\n",
+        "df['MIS_Status'] = df['MIS_Status'].replace(['CHGOFF'], 1)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 70,
       "metadata": {},
       "outputs": [
         {
@@ -1057,7 +1057,7 @@
               "      <td>1999-02-28</td>\n",
               "      <td>60000.0</td>\n",
               "      <td>0.0</td>\n",
-              "      <td>Paid</td>\n",
+              "      <td>0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>60000.0</td>\n",
               "      <td>48000.0</td>\n",
@@ -1081,7 +1081,7 @@
               "      <td>1997-05-31</td>\n",
               "      <td>40000.0</td>\n",
               "      <td>0.0</td>\n",
-              "      <td>Paid</td>\n",
+              "      <td>0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>40000.0</td>\n",
               "      <td>32000.0</td>\n",
@@ -1105,7 +1105,7 @@
               "      <td>1997-12-31</td>\n",
               "      <td>287000.0</td>\n",
               "      <td>0.0</td>\n",
-              "      <td>Paid</td>\n",
+              "      <td>0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>287000.0</td>\n",
               "      <td>215250.0</td>\n",
@@ -1129,7 +1129,7 @@
               "      <td>1997-06-30</td>\n",
               "      <td>35000.0</td>\n",
               "      <td>0.0</td>\n",
-              "      <td>Paid</td>\n",
+              "      <td>0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>35000.0</td>\n",
               "      <td>28000.0</td>\n",
@@ -1153,7 +1153,7 @@
               "      <td>1997-05-14</td>\n",
               "      <td>229000.0</td>\n",
               "      <td>0.0</td>\n",
-              "      <td>Paid</td>\n",
+              "      <td>0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>229000.0</td>\n",
               "      <td>229000.0</td>\n",
@@ -1186,16 +1186,16 @@
               "4  ...          N       N         N/A        1997-05-14           229000.0   \n",
               "\n",
               "   BalanceGross  MIS_Status ChgOffPrinGr    GrAppv  SBA_Appv  \n",
-              "0           0.0        Paid          0.0   60000.0   48000.0  \n",
-              "1           0.0        Paid          0.0   40000.0   32000.0  \n",
-              "2           0.0        Paid          0.0  287000.0  215250.0  \n",
-              "3           0.0        Paid          0.0   35000.0   28000.0  \n",
-              "4           0.0        Paid          0.0  229000.0  229000.0  \n",
+              "0           0.0           0          0.0   60000.0   48000.0  \n",
+              "1           0.0           0          0.0   40000.0   32000.0  \n",
+              "2           0.0           0          0.0  287000.0  215250.0  \n",
+              "3           0.0           0          0.0   35000.0   28000.0  \n",
+              "4           0.0           0          0.0  229000.0  229000.0  \n",
               "\n",
               "[5 rows x 27 columns]"
             ]
           },
-          "execution_count": 42,
+          "execution_count": 70,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1206,7 +1206,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 71,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "MIS_Status           1.000000\n",
+              "ChgOffPrinGr         0.444579\n",
+              "UrbanRural           0.157815\n",
+              "NAICS                0.105785\n",
+              "NewExist             0.019671\n",
+              "RetainedJob          0.012327\n",
+              "CreateJob            0.011863\n",
+              "BalanceGross        -0.000965\n",
+              "Zip                 -0.003360\n",
+              "FranchiseCode       -0.015329\n",
+              "NoEmp               -0.026167\n",
+              "DisbursementGross   -0.111058\n",
+              "GrAppv              -0.120756\n",
+              "SBA_Appv            -0.132798\n",
+              "LoanNr_ChkDgt       -0.171629\n",
+              "Term                -0.315798\n",
+              "Name: MIS_Status, dtype: float64"
+            ]
+          },
+          "execution_count": 71,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df.corr()[\"MIS_Status\"].sort_values(ascending=False)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 72,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1216,25 +1252,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 73,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "0            Paid\n",
-            "1            Paid\n",
-            "2            Paid\n",
-            "3            Paid\n",
-            "4            Paid\n",
-            "           ...   \n",
-            "899159       Paid\n",
-            "899160       Paid\n",
-            "899161       Paid\n",
-            "899162    Charged\n",
-            "899163       Paid\n",
-            "Name: MIS_Status, Length: 886240, dtype: object\n"
+            "0         0\n",
+            "1         0\n",
+            "2         0\n",
+            "3         0\n",
+            "4         0\n",
+            "         ..\n",
+            "899159    0\n",
+            "899160    0\n",
+            "899161    0\n",
+            "899162    1\n",
+            "899163    0\n",
+            "Name: MIS_Status, Length: 886240, dtype: int64\n"
           ]
         }
       ],
@@ -1244,7 +1280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 74,
       "metadata": {},
       "outputs": [
         {
@@ -1449,7 +1485,7 @@
               "[5 rows x 26 columns]"
             ]
           },
-          "execution_count": 45,
+          "execution_count": 74,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1471,7 +1507,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 75,
       "metadata": {},
       "outputs": [],
       "source": [
