--- a/ClassifactionAssignmentAlt.ipynb
+++ b/ClassifactionAssignmentAlt.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 123,
+      "execution_count": 25,
       "id": "1b540543",
       "metadata": {
         "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": 26,
       "id": "647b1a4a",
       "metadata": {
         "execution": {
@@ -281,7 +281,7 @@
               "[5 rows x 27 columns]"
             ]
           },
-          "execution_count": 124,
+          "execution_count": 26,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -293,7 +293,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "execution_count": 27,
       "id": "aa3a9d71",
       "metadata": {
         "execution": {
@@ -322,7 +322,7 @@
               "(899164, 27)"
             ]
           },
-          "execution_count": 125,
+          "execution_count": 27,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -342,7 +342,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 126,
+      "execution_count": 28,
       "id": "cd7164f0",
       "metadata": {
         "collapsed": false,
@@ -403,7 +403,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 126,
+          "execution_count": 28,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -414,7 +414,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 127,
+      "execution_count": 29,
       "id": "fd60b7e9",
       "metadata": {
         "collapsed": false,
@@ -471,7 +471,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 128,
+      "execution_count": 30,
       "id": "ed9ab3a6",
       "metadata": {
         "collapsed": false,
@@ -528,7 +528,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 129,
+      "execution_count": 31,
       "id": "edcc7566",
       "metadata": {
         "collapsed": false,
@@ -598,7 +598,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 130,
+      "execution_count": 32,
       "id": "b0507c6e",
       "metadata": {
         "collapsed": false,
@@ -638,7 +638,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 130,
+          "execution_count": 32,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -666,7 +666,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 131,
+      "execution_count": 33,
       "id": "d2f47f7f",
       "metadata": {
         "collapsed": false,
@@ -707,7 +707,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 132,
+      "execution_count": 34,
       "id": "0afe6f93",
       "metadata": {
         "collapsed": false,
@@ -915,7 +915,7 @@
               "4       $0.00   $229,000.00   $229,000.00           0        0  "
             ]
           },
-          "execution_count": 132,
+          "execution_count": 34,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -926,7 +926,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 133,
+      "execution_count": 35,
       "id": "12437a72",
       "metadata": {
         "collapsed": false,
@@ -960,7 +960,7 @@
               "(802319, 19)"
             ]
           },
-          "execution_count": 133,
+          "execution_count": 35,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -971,7 +971,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 134,
+      "execution_count": 36,
       "id": "9d2da6c3",
       "metadata": {
         "collapsed": false,
@@ -1016,7 +1016,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 135,
+      "execution_count": 37,
       "id": "19dc5bbf",
       "metadata": {
         "collapsed": false,
@@ -1052,7 +1052,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 136,
+      "execution_count": 38,
       "id": "62e2d456",
       "metadata": {
         "collapsed": false,
@@ -1090,7 +1090,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 137,
+      "execution_count": 39,
       "id": "3ec6bd14",
       "metadata": {
         "execution": {
@@ -1119,7 +1119,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 138,
+      "execution_count": 40,
       "id": "49516c01",
       "metadata": {
         "collapsed": false,
@@ -1156,7 +1156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 139,
+      "execution_count": 41,
       "id": "074cf126",
       "metadata": {
         "collapsed": false,
@@ -1190,7 +1190,7 @@
               "(783512, 19)"
             ]
           },
-          "execution_count": 139,
+          "execution_count": 41,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1201,7 +1201,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 140,
+      "execution_count": 42,
       "id": "4af0f04f",
       "metadata": {
         "collapsed": false,
@@ -1236,7 +1236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "id": "3738d465",
       "metadata": {
         "collapsed": false,
@@ -1273,7 +1273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "id": "da6da420",
       "metadata": {
         "collapsed": false,
@@ -1300,14 +1300,214 @@
         },
         "tags": []
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>NAICS</th>\n",
+              "      <th>Term</th>\n",
+              "      <th>NoEmp</th>\n",
+              "      <th>NewExist</th>\n",
+              "      <th>CreateJob</th>\n",
+              "      <th>RetainedJob</th>\n",
+              "      <th>Franchise</th>\n",
+              "      <th>UrbanRural</th>\n",
+              "      <th>RevLineCr</th>\n",
+              "      <th>LowDoc</th>\n",
+              "      <th>...</th>\n",
+              "      <th>State_SD</th>\n",
+              "      <th>State_TN</th>\n",
+              "      <th>State_TX</th>\n",
+              "      <th>State_UT</th>\n",
+              "      <th>State_VA</th>\n",
+              "      <th>State_VT</th>\n",
+              "      <th>State_WA</th>\n",
+              "      <th>State_WI</th>\n",
+              "      <th>State_WV</th>\n",
+              "      <th>State_WY</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>45</td>\n",
+              "      <td>84</td>\n",
+              "      <td>4</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>72</td>\n",
+              "      <td>60</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>62</td>\n",
+              "      <td>180</td>\n",
+              "      <td>7</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>0</td>\n",
+              "      <td>60</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>0</td>\n",
+              "      <td>240</td>\n",
+              "      <td>14</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>7</td>\n",
+              "      <td>7</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>5 rows × 123 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   NAICS  Term  NoEmp  NewExist  CreateJob  RetainedJob  Franchise  \\\n",
+              "0     45    84      4       1.0          0            0          0   \n",
+              "1     72    60      2       1.0          0            0          0   \n",
+              "2     62   180      7       0.0          0            0          0   \n",
+              "3      0    60      2       0.0          0            0          0   \n",
+              "4      0   240     14       0.0          7            7          0   \n",
+              "\n",
+              "   UrbanRural  RevLineCr  LowDoc  ...  State_SD  State_TN  State_TX  State_UT  \\\n",
+              "0           0          0       1  ...         0         0         0         0   \n",
+              "1           0          0       1  ...         0         0         0         0   \n",
+              "2           0          0       0  ...         0         0         0         0   \n",
+              "3           0          0       1  ...         0         0         0         0   \n",
+              "4           0          0       0  ...         0         0         0         0   \n",
+              "\n",
+              "   State_VA  State_VT  State_WA  State_WI  State_WV  State_WY  \n",
+              "0         0         0         0         0         0         0  \n",
+              "1         0         0         0         0         0         0  \n",
+              "2         0         0         0         0         0         0  \n",
+              "3         0         0         0         0         0         0  \n",
+              "4         0         0         0         0         0         0  \n",
+              "\n",
+              "[5 rows x 123 columns]"
+            ]
+          },
+          "execution_count": 44,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "df.head()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "id": "9bc4e9ad",
       "metadata": {
         "collapsed": false,
@@ -1334,14 +1534,26 @@
         },
         "tags": []
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([45, 72, 62,  0, 33, 81, 23, 44, 42, 61, 53, 54, 31, 51, 71, 52, 21,\n",
+              "       32, 56, 48, 11, 92, 22, 49, 55])"
+            ]
+          },
+          "execution_count": 45,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "df['NAICS'].unique()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "id": "de962508",
       "metadata": {
         "collapsed": false,
@@ -1368,14 +1580,30 @@
         },
         "tags": []
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Index(['NAICS', 'Term', 'NoEmp', 'NewExist', 'CreateJob', 'RetainedJob',\n",
+              "       'Franchise', 'UrbanRural', 'RevLineCr', 'LowDoc',\n",
+              "       ...\n",
+              "       'State_SD', 'State_TN', 'State_TX', 'State_UT', 'State_VA', 'State_VT',\n",
+              "       'State_WA', 'State_WI', 'State_WV', 'State_WY'],\n",
+              "      dtype='object', length=123)"
+            ]
+          },
+          "execution_count": 46,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "df.columns"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "id": "90f5426f",
       "metadata": {
         "collapsed": false,
@@ -1402,7 +1630,29 @@
         },
         "tags": []
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "NAICS          int64\n",
+              "Term           int64\n",
+              "NoEmp          int64\n",
+              "NewExist     float64\n",
+              "CreateJob      int64\n",
+              "              ...   \n",
+              "State_VT       uint8\n",
+              "State_WA       uint8\n",
+              "State_WI       uint8\n",
+              "State_WV       uint8\n",
+              "State_WY       uint8\n",
+              "Length: 123, dtype: object"
+            ]
+          },
+          "execution_count": 47,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "df.dtypes"
       ]
@@ -1420,7 +1670,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 48,
       "metadata": {},
       "outputs": [],
       "source": [
