--- a/ClassifactionAssignmentAlt.ipynb
+++ b/ClassifactionAssignmentAlt.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 68,
       "id": "1b540543",
       "metadata": {
         "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -43,12 +43,13 @@
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import classification_report, confusion_matrix\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
-        "import seaborn as sns"
+        "import seaborn as sns\n",
+        "from sklearn.metrics  import f1_score,accuracy_score"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 69,
       "id": "647b1a4a",
       "metadata": {
         "execution": {
@@ -71,14 +72,6 @@
         "tags": []
       },
       "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/Users/sentinel/opt/anaconda3/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3444: DtypeWarning: Columns (9) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-            "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
-          ]
-        },
         {
           "data": {
             "text/html": [
@@ -281,19 +274,19 @@
               "[5 rows x 27 columns]"
             ]
           },
-          "execution_count": 26,
+          "execution_count": 69,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "df = pd.read_csv(\"/Users/sentinel/Developer/SBAnational.csv\")\n",
+        "df = pd.read_csv(\"/Users/sentinel/Developer/SBAnational.csv\",low_memory=False)\n",
         "df.head()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 70,
       "id": "aa3a9d71",
       "metadata": {
         "execution": {
@@ -322,7 +315,7 @@
               "(899164, 27)"
             ]
           },
-          "execution_count": 27,
+          "execution_count": 70,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -342,7 +335,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 71,
       "id": "cd7164f0",
       "metadata": {
         "collapsed": false,
@@ -403,7 +396,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 28,
+          "execution_count": 71,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -414,7 +407,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 72,
       "id": "fd60b7e9",
       "metadata": {
         "collapsed": false,
@@ -471,7 +464,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 73,
       "id": "ed9ab3a6",
       "metadata": {
         "collapsed": false,
@@ -528,7 +521,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 74,
       "id": "edcc7566",
       "metadata": {
         "collapsed": false,
@@ -598,7 +591,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 75,
       "id": "b0507c6e",
       "metadata": {
         "collapsed": false,
@@ -638,7 +631,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 32,
+          "execution_count": 75,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -666,7 +659,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 76,
       "id": "d2f47f7f",
       "metadata": {
         "collapsed": false,
@@ -707,7 +700,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 77,
       "id": "0afe6f93",
       "metadata": {
         "collapsed": false,
@@ -915,7 +908,7 @@
               "4       $0.00   $229,000.00   $229,000.00           0        0  "
             ]
           },
-          "execution_count": 34,
+          "execution_count": 77,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -926,7 +919,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 78,
       "id": "12437a72",
       "metadata": {
         "collapsed": false,
@@ -960,7 +953,7 @@
               "(802319, 19)"
             ]
           },
-          "execution_count": 35,
+          "execution_count": 78,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -971,7 +964,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 79,
       "id": "9d2da6c3",
       "metadata": {
         "collapsed": false,
@@ -1016,7 +1009,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 80,
       "id": "19dc5bbf",
       "metadata": {
         "collapsed": false,
@@ -1052,7 +1045,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 81,
       "id": "62e2d456",
       "metadata": {
         "collapsed": false,
@@ -1090,7 +1083,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 82,
       "id": "3ec6bd14",
       "metadata": {
         "execution": {
@@ -1119,7 +1112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 83,
       "id": "49516c01",
       "metadata": {
         "collapsed": false,
@@ -1156,7 +1149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 84,
       "id": "074cf126",
       "metadata": {
         "collapsed": false,
@@ -1190,7 +1183,7 @@
               "(783512, 19)"
             ]
           },
-          "execution_count": 41,
+          "execution_count": 84,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1201,7 +1194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 85,
       "id": "4af0f04f",
       "metadata": {
         "collapsed": false,
@@ -1236,7 +1229,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 86,
       "id": "3738d465",
       "metadata": {
         "collapsed": false,
@@ -1273,7 +1266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 87,
       "id": "da6da420",
       "metadata": {
         "collapsed": false,
@@ -1496,7 +1489,7 @@
               "[5 rows x 123 columns]"
             ]
           },
-          "execution_count": 44,
+          "execution_count": 87,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1507,7 +1500,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 88,
       "id": "9bc4e9ad",
       "metadata": {
         "collapsed": false,
@@ -1542,7 +1535,7 @@
               "       32, 56, 48, 11, 92, 22, 49, 55])"
             ]
           },
-          "execution_count": 45,
+          "execution_count": 88,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1553,7 +1546,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 89,
       "id": "de962508",
       "metadata": {
         "collapsed": false,
@@ -1592,7 +1585,7 @@
               "      dtype='object', length=123)"
             ]
           },
-          "execution_count": 46,
+          "execution_count": 89,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1603,7 +1596,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 90,
       "id": "90f5426f",
       "metadata": {
         "collapsed": false,
@@ -1648,7 +1641,7 @@
               "Length: 123, dtype: object"
             ]
           },
-          "execution_count": 47,
+          "execution_count": 90,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1670,7 +1663,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 91,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1685,6 +1678,64 @@
         "y = pd.get_dummies(y)\n",
         "y = y.to_numpy()\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0, stratify=y)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 92,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "RandomForestClassifier()"
+            ]
+          },
+          "execution_count": 92,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# DT= DecisionTreeClassifier()\n",
+        "# DT.fit(X_train,y_train)\n",
+        "\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "RF = RandomForestClassifier()\n",
+        "RF.fit(X_train,y_train)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 93,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0.9999795791257824\n",
+            "0.9999821316894488\n",
+            "0.0026113192905788296\n",
+            "0.0026113192905788296\n"
+          ]
+        }
+      ],
+      "source": [
+        "# We use the predict() on the model to predict the output\n",
+        "# pred=DT.predict(X_test)\n",
+        "pred=RF.predict(X_test)\n",
+        " \n",
+        "# for classification we use accuracy and F1 score\n",
+        "print(accuracy_score(y_test,pred))\n",
+        "print(f1_score(y_test,pred,average='micro'))\n",
+        " \n",
+        "# for regression we use R2 score and MAE(mean absolute error)\n",
+        "# all other steps will be same as classification as shown above\n",
+        "from sklearn.metrics import mean_absolute_error\n",
+        "from sklearn.metrics import r2_score\n",
+        "print(mean_absolute_error(y_test,pred))\n",
+        "print(mean_absolute_error(y_test,pred))"
       ]
     },
     {
