--- a/ClassifactionAssignmentV3.ipynb
+++ b/ClassifactionAssignmentV3.ipynb
@@ -1633,7 +1633,7 @@
       ],
       "source": [
         "from sklearn.metrics import mean_absolute_error\n",
-        "from sklearn.metrics import classification_report, confusion_matrix\n",
+        "from sklearn.metrics import classification_report\n",
         "\n",
         "# We use the predict() on the model to predict the output\n",
         "pred=RF.predict(X_test)\n",
