--- a/ClassificationAssignmentV4.ipynb
+++ b/ClassificationAssignmentV4.ipynb
@@ -434,10 +434,9 @@
     }
    ],
    "source": [
-    "# Let's read CSV and take a look at our data\n",
-    "# We drop unique ID and borrower's organization name right away as they are useless or even noisy as features;\n",
-    "# Also we drop ChgOffDate, ChgOffPrinGr because they can directly tell us that the loan is charged-off\n",
-    "# 'ApprovalDate', 'ApprovalFY', 'DisbursementDate' are dropped to make the model time-independent\n",
+    "# We drop unique ID and borrower's organization name right away as they are useless.\n",
+    "# We also drop ChgOffDate, ChgOffPrinGr because they can directly tell us that the loan is charged-off.\n",
+    "# 'ApprovalDate', 'ApprovalFY', 'DisbursementDate' are dropped to make the model time-independent.\n",
     "df = pd.read_csv(\"/Users/sentinel/Developer/SBAnational.csv\",low_memory=False).drop(columns=['LoanNr_ChkDgt', 'Name', 'ChgOffDate', 'ChgOffPrinGr','ApprovalDate', 'ApprovalFY', 'DisbursementDate'])\n",
     "len_data = len(df)\n",
     "df"
@@ -469,6 +468,7 @@
     "# Let's convert the strings styled as '$XXXX.XX' to float values\n",
     "money_cols = ['DisbursementGross', 'BalanceGross', 'GrAppv', 'SBA_Appv']\n",
     "\n",
+    "# Here, we remove the comma from the values.\n",
     "for col in money_cols:\n",
     "  df[col] = [float(val[1:].replace(',', '')) for val in df[col].values]"
    ]
@@ -496,7 +496,7 @@
    },
    "outputs": [],
    "source": [
-    "# Let's check our data for missing values and fill NAs with mode\n",
+    "# Let's check our data for missing values and fill NAs with mode. The mode is the value that appears the most.\n",
     "for col in df.drop(columns=['MIS_Status']).columns:\n",
     "  if df[col].isna().any():\n",
     "    df[col] = df[col].fillna(df[col].mode().iloc[0])"
