Added Mean squared error

--- a/ClassifactionAssignmentV3.ipynb
+++ b/ClassifactionAssignmentV3.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 2,
       "id": "1b540543",
       "metadata": {
         "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 3,
       "id": "647b1a4a",
       "metadata": {
         "execution": {
@@ -274,7 +274,7 @@
               "[5 rows x 27 columns]"
             ]
           },
-          "execution_count": 86,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -287,7 +287,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 4,
       "id": "aa3a9d71",
       "metadata": {
         "execution": {
@@ -316,7 +316,7 @@
               "(899164, 27)"
             ]
           },
-          "execution_count": 87,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -337,7 +337,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 5,
       "id": "cd7164f0",
       "metadata": {
         "collapsed": false,
@@ -398,7 +398,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 88,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -410,7 +410,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 6,
       "id": "fd60b7e9",
       "metadata": {
         "collapsed": false,
@@ -446,7 +446,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 7,
       "id": "edcc7566",
       "metadata": {
         "collapsed": false,
@@ -482,7 +482,7 @@
               "Name: Default, dtype: int64"
             ]
           },
-          "execution_count": 90,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -495,7 +495,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": 8,
       "id": "b0507c6e",
       "metadata": {
         "collapsed": false,
@@ -535,7 +535,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 91,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -564,7 +564,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 9,
       "id": "d2f47f7f",
       "metadata": {
         "collapsed": false,
@@ -605,7 +605,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 10,
       "id": "0afe6f93",
       "metadata": {
         "collapsed": false,
@@ -813,7 +813,7 @@
               "4       $0.00   $229,000.00   $229,000.00           0        0  "
             ]
           },
-          "execution_count": 93,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -825,7 +825,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 11,
       "id": "12437a72",
       "metadata": {
         "collapsed": false,
@@ -859,7 +859,7 @@
               "(802319, 19)"
             ]
           },
-          "execution_count": 94,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -871,7 +871,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 12,
       "id": "9d2da6c3",
       "metadata": {
         "collapsed": false,
@@ -916,7 +916,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 13,
       "id": "19dc5bbf",
       "metadata": {
         "collapsed": false,
@@ -952,7 +952,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 14,
       "id": "62e2d456",
       "metadata": {
         "collapsed": false,
@@ -990,7 +990,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 15,
       "id": "3ec6bd14",
       "metadata": {
         "execution": {
@@ -1019,7 +1019,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 16,
       "id": "49516c01",
       "metadata": {
         "collapsed": false,
@@ -1056,7 +1056,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": 17,
       "id": "074cf126",
       "metadata": {
         "collapsed": false,
@@ -1090,7 +1090,7 @@
               "(783512, 19)"
             ]
           },
-          "execution_count": 100,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1101,7 +1101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": 18,
       "id": "4af0f04f",
       "metadata": {
         "collapsed": false,
@@ -1136,7 +1136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": 19,
       "id": "3738d465",
       "metadata": {
         "collapsed": false,
@@ -1173,7 +1173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 20,
       "id": "da6da420",
       "metadata": {
         "collapsed": false,
@@ -1396,7 +1396,7 @@
               "[5 rows x 123 columns]"
             ]
           },
-          "execution_count": 103,
+          "execution_count": 20,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1407,7 +1407,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 21,
       "id": "9bc4e9ad",
       "metadata": {
         "collapsed": false,
@@ -1442,7 +1442,7 @@
               "       32, 56, 48, 11, 92, 22, 49, 55])"
             ]
           },
-          "execution_count": 104,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1453,7 +1453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": 22,
       "id": "de962508",
       "metadata": {
         "collapsed": false,
@@ -1492,7 +1492,7 @@
               "      dtype='object', length=123)"
             ]
           },
-          "execution_count": 105,
+          "execution_count": 22,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1503,7 +1503,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": 23,
       "id": "90f5426f",
       "metadata": {
         "collapsed": false,
@@ -1548,7 +1548,7 @@
               "Length: 123, dtype: object"
             ]
           },
-          "execution_count": 106,
+          "execution_count": 23,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1559,7 +1559,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -1757,7 +1757,7 @@
               "[5 rows x 123 columns]"
             ]
           },
-          "execution_count": 107,
+          "execution_count": 24,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1779,7 +1779,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1802,7 +1802,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
@@ -1811,7 +1811,7 @@
               "RandomForestClassifier()"
             ]
           },
-          "execution_count": 109,
+          "execution_count": 26,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1824,37 +1824,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "DecisionTreeClassifier()"
-            ]
-          },
-          "execution_count": 110,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "DT= DecisionTreeClassifier()\n",
-        "DT.fit(X_train,y_train)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [],
       "source": [
-        "from sklearn.metrics import mean_absolute_error\n",
+        "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
         "from sklearn.metrics import classification_report\n",
+        "import math\n",
         "\n",
         "# We use the predict() on the model to predict the output\n",
-        "pred=RF.predict(X_test)\n",
-        "pred2=DT.predict(X_test)"
+        "pred=RF.predict(X_test)"
       ]
     },
     {
@@ -1879,7 +1858,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": 30,
       "metadata": {
         "id": "GvJ5GWUr9y9P"
       },
@@ -1888,18 +1867,10 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "The Random Forest model has a accuracy score of 0.9999795791257824 and a F1 score of 0.9999795791257824.\n",
-            "This model also has a Mean Absolute Error of 0.002613871899856033.\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "           0       1.00      1.00      1.00    164065\n",
-            "           1       1.00      1.00      1.00     31813\n",
-            "\n",
-            "   micro avg       1.00      1.00      1.00    195878\n",
-            "   macro avg       1.00      1.00      1.00    195878\n",
-            "weighted avg       1.00      1.00      1.00    195878\n",
-            " samples avg       1.00      1.00      1.00    195878\n",
-            "\n"
+            "The Random Forest model has a accuracy score of 0.9999642634701191 and a F1 score of 0.9999668159946905.\n",
+            "This model also has a Mean Absolute Error of 0.0045717232154708545.\n",
+            "This model also has a Mean squared Error of 3.3183920603641046e-05.\n",
+            "This model also has a Root Mean Absolute Error of 0.005760548637381777.\n"
           ]
         }
       ],
@@ -1908,46 +1879,13 @@
         "accuracy = accuracy_score(y_test,pred)\n",
         "f1 = f1_score(y_test,pred,average='micro')\n",
         "mae = mean_absolute_error(y_test,pred)\n",
-        "classy = classification_report(y_test, pred)\n",
+        "mse = mean_squared_error(y_test, pred)\n",
+        "rmse = math.sqrt(mse)\n",
         "\n",
         "print(f\"The Random Forest model has a accuracy score of {accuracy} and a F1 score of {f1}.\")\n",
         "print(f\"This model also has a Mean Absolute Error of {mae}.\")\n",
-        "print(f\"{classy}\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 113,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "The Decision Tree model has a accuracy score of 1.0 and a F1 score of 1.0.\n",
-            "This model also has a Mean Absolute Error of 0.0.\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "           0       1.00      1.00      1.00    164065\n",
-            "           1       1.00      1.00      1.00     31813\n",
-            "\n",
-            "   micro avg       1.00      1.00      1.00    195878\n",
-            "   macro avg       1.00      1.00      1.00    195878\n",
-            "weighted avg       1.00      1.00      1.00    195878\n",
-            " samples avg       1.00      1.00      1.00    195878\n",
-            "\n"
-          ]
-        }
-      ],
-      "source": [
-        "accuracy2 = accuracy_score(y_test,pred2)\n",
-        "f12 = f1_score(y_test,pred2,average='micro')\n",
-        "mae2 = mean_absolute_error(y_test,pred2)\n",
-        "classy2 = classification_report(y_test, pred2)\n",
-        "\n",
-        "print(f\"The Decision Tree model has a accuracy score of {accuracy2} and a F1 score of {f12}.\")\n",
-        "print(f\"This model also has a Mean Absolute Error of {mae2}.\")\n",
-        "print(f\"{classy2}\")"
+        "print(f\"This model also has a Mean squared Error of {mse}.\")\n",
+        "print(f\"This model also has a Root Mean Absolute Error of {rmse}.\")"
       ]
     }
   ],
