--- a/ClassifactionAssignmentV3.ipynb
+++ b/ClassifactionAssignmentV3.ipynb
@@ -1824,11 +1824,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 38,
       "metadata": {},
       "outputs": [],
       "source": [
-        "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+        "from sklearn.metrics import precision_score, confusion_matrix, multilabel_confusion_matrix, recall_score\n",
         "from sklearn.metrics import classification_report\n",
         "import math\n",
         "\n",
@@ -1858,7 +1858,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 47,
       "metadata": {
         "id": "GvJ5GWUr9y9P"
       },
@@ -1868,9 +1868,13 @@
           "output_type": "stream",
           "text": [
             "The Random Forest model has a accuracy score of 0.9999642634701191 and a F1 score of 0.9999668159946905.\n",
-            "This model also has a Mean Absolute Error of 0.0045717232154708545.\n",
-            "This model also has a Mean squared Error of 3.3183920603641046e-05.\n",
-            "This model also has a Root Mean Absolute Error of 0.005760548637381777.\n"
+            "This model also has a Precision Score of 0.9999693685322932.\n",
+            "This model also has a recall score of 0.9999642634701191.\n",
+            "[[[ 31812      1]\n",
+            "  [     5 164060]]\n",
+            "\n",
+            " [[164060      5]\n",
+            "  [     2  31811]]]\n"
           ]
         }
       ],
@@ -1878,15 +1882,22 @@
         "# for classification we use accuracy and F1 score\n",
         "accuracy = accuracy_score(y_test,pred)\n",
         "f1 = f1_score(y_test,pred,average='micro')\n",
-        "mae = mean_absolute_error(y_test,pred)\n",
-        "mse = mean_squared_error(y_test, pred)\n",
-        "rmse = math.sqrt(mse)\n",
+        "psc = precision_score(y_test, pred, average=\"micro\")\n",
+        "rsc = recall_score(y_test, pred, average=\"micro\")\n",
+        "cfmm = multilabel_confusion_matrix(y_test, pred)\n",
         "\n",
         "print(f\"The Random Forest model has a accuracy score of {accuracy} and a F1 score of {f1}.\")\n",
-        "print(f\"This model also has a Mean Absolute Error of {mae}.\")\n",
-        "print(f\"This model also has a Mean squared Error of {mse}.\")\n",
-        "print(f\"This model also has a Root Mean Absolute Error of {rmse}.\")"
+        "print(f\"This model also has a Precision Score of {psc}.\")\n",
+        "print(f\"This model also has a recall score of {rsc}.\")\n",
+        "print(cfmm)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
